@@ -221,16 +221,16 @@ if (MINGW)
       set ( USE_PORTAUDIO 1 )
       set ( USE_PORTMIDI  1 )
 else (MINGW)
-   PKGCONFIG (portaudio-2.0 19 PORTAUDIO_INCDIR PORTAUDIO_LIBDIR PORTAUDIO_LIB PORTAUDIO_CPP )
-   if (PORTAUDIO_INCDIR)
-	message("portaudio detected ${PORTAUDIO_INCDIR} ${PORTAUDIO_LIBDIR} ${PORTAUDIO_LIB}")
-      set ( USE_PORTAUDIO 1 )
-   else (PORTAUDIO_INCDIR)
-      message("optional package portaudio-2.0 Version 19 not found (package portaudio19-dev)\n")
-      set ( USE_PORTAUDIO 0 )
-   endif (PORTAUDIO_INCDIR)
    if (APPLE)
       set ( USE_PORTMIDI  1 )
+      PKGCONFIG (portaudio-2.0 19 PORTAUDIO_INCDIR PORTAUDIO_LIBDIR PORTAUDIO_LIB PORTAUDIO_CPP )
+      if (PORTAUDIO_INCDIR)
+   	message("portaudio detected ${PORTAUDIO_INCDIR} ${PORTAUDIO_LIBDIR} ${PORTAUDIO_LIB}")
+         set ( USE_PORTAUDIO 1 )
+      else (PORTAUDIO_INCDIR)
+         message("optional package portaudio-2.0 Version 19 not found (package portaudio19-dev)\n")
+         set ( USE_PORTAUDIO 0 )
+      endif (PORTAUDIO_INCDIR)
    else (APPLE)
       set (USE_PORTMIDI 0)
    endif (APPLE)
