@@ -145,11 +145,13 @@ bool AlsaDriver::pcmStart()
             fprintf  (stderr, "Alsa_driver: full buffer not available at start.\n");
             return true;
             }
-      for (unsigned i = 0; i < _nfrags; i++) {
-            playInit (_frsize);
-            for (unsigned j = 0; j < _play_nchan; j++)
-                  clearChan(j, _frsize);
-            snd_pcm_mmap_commit(_play_handle, _play_offs, _frsize);
+      if (mmappedInterface) {
+            for (unsigned i = 0; i < _nfrags; i++) {
+                  playInit (_frsize);
+                  for (unsigned j = 0; j < _play_nchan; j++)
+                        clearChan(j, _frsize);
+                  snd_pcm_mmap_commit(_play_handle, _play_offs, _frsize);
+                  }
             }
       if ((err = snd_pcm_start (_play_handle)) < 0) {
             fprintf (stderr, "Alsa_driver: pcm_start(play): %s.\n", snd_strerror (err));
@@ -281,18 +283,17 @@ int AlsaDriver::setHwpar(snd_pcm_t* handle, snd_pcm_hw_params_t* hwpar)
             return -1;
             }
 
+      mmappedInterface = true;
       if (((err = snd_pcm_hw_params_set_access (handle, hwpar, SND_PCM_ACCESS_MMAP_NONINTERLEAVED)) < 0)
          && ((err = snd_pcm_hw_params_set_access (handle, hwpar, SND_PCM_ACCESS_MMAP_INTERLEAVED)) < 0)) {
+            mmappedInterface = false;
             fprintf (stderr, "Alsa_driver: the interface doesn't support mmap-based access.\n");
-            rwAccess = true;
-//            if (((err = snd_pcm_hw_params_set_access (handle, hwpar, SND_PCM_ACCESS_RW_NONINTERLEAVED)) < 0)
-//               && ((err = snd_pcm_hw_params_set_access (handle, hwpar, SND_PCM_ACCESS_RW_INTERLEAVED)) < 0)) {
-//                  fprintf (stderr, "Alsa_driver: the interface doesn't support rw-based access.\n");
+            if (((err = snd_pcm_hw_params_set_access (handle, hwpar, SND_PCM_ACCESS_RW_NONINTERLEAVED)) < 0)
+               && ((err = snd_pcm_hw_params_set_access (handle, hwpar, SND_PCM_ACCESS_RW_INTERLEAVED)) < 0)) {
+                  fprintf (stderr, "Alsa_driver: the interface doesn't support rw-based access.\n");
                   return -1;
-//                  }
+                  }
             }
-      else
-            rwAccess = false;
 
       if (((err = snd_pcm_hw_params_set_format(handle, hwpar, SND_PCM_FORMAT_S16)) < 0)
          && ((err = snd_pcm_hw_params_set_format(handle, hwpar, SND_PCM_FORMAT_S24_3LE)) < 0)
@@ -409,18 +410,16 @@ int AlsaDriver::recover()
 
 char* AlsaDriver::play_16le (const float* src, char* dst, int step, int nfrm)
       {
-      float     s;
-      short int d;
-
       while (nfrm--) {
-            s = *src++;
+            short d;
+            float s = *src++;
             if (s >  1)
                   d = 0x7fff;
             else if (s < -1)
                   d = 0x8001;
             else
-                  d = (short int)(0x7fff * s);
-            *((short int *) dst) = d;
+                  d = (short)(0x7fff * s);
+            *((short*) dst) = d;
             dst += step;
             }
       return dst;
@@ -545,10 +544,43 @@ void AlsaDriver::write(int n, float* l, float* r)
                   }
             break;
             }
-      playInit(n);
-      _play_ptr[0] = _play_func(l, _play_ptr[0], _play_step, n);
-      _play_ptr[1] = _play_func(r, _play_ptr[1], _play_step, n);
-      snd_pcm_mmap_commit(_play_handle, _play_offs, n);
+      if (mmappedInterface) {
+            playInit(n);
+            _play_ptr[0] = _play_func(l, _play_ptr[0], _play_step, n);
+            _play_ptr[1] = _play_func(r, _play_ptr[1], _play_step, n);
+            snd_pcm_mmap_commit(_play_handle, _play_offs, n);
+            }
+      else {
+            //
+            //  tested only INTERLEAVED and S16 format
+            //
+            int err;
+            if (_play_access == SND_PCM_ACCESS_RW_NONINTERLEAVED) {
+                  //
+                  // untested
+                  //
+                  short lbuffer[n];
+                  short rbuffer[n];
+                  _play_func(l, (char*)lbuffer, 2, n);
+                  _play_func(r, (char*)rbuffer, 2, n);
+                  void* bp[2];
+                  bp[0] = lbuffer;
+                  bp[1] = rbuffer;
+                  if ((err = snd_pcm_writen(_play_handle, bp, n)) < 0)
+                        printf("AlsaDriver::write(): failed (%s)\n", snd_strerror(err));
+                  }
+            else if (_play_access == SND_PCM_ACCESS_RW_INTERLEAVED) {
+                  short buffer[n * 2];
+                  _play_func(l, (char*)buffer, 4, n);
+                  _play_func(r, (char*)(buffer + 1), 4, n);
+                  if ((err = snd_pcm_writei(_play_handle, buffer, n)) < 0)
+                        printf("AlsaDriver::write(): failed (%s)\n", snd_strerror(err));
+                  }
+            else {
+                  printf("AlsaDriver::write(): unsupported accesss type %d\n", _play_access);
+                  return;
+                  }
+            }
       }
 
 //---------------------------------------------------------
