@@ -1,3 +1,7 @@
+27.may (ws)
+      - removed PortAudio audio interface from linux version
+      - Extend ALSA interface for non dma access. This should work with
+        desktop PulseAudio.
 26.may (ws)
       - fix #5867: End Repeat disappears when creating multimeasure rests
       - refacturing of playback architecture in progress
